--- a/src/index.css
+++ b/src/index.css
@@ -50,10 +50,10 @@ body{
 /*Centrar contenido de pagina*/
 #root {
     display: flex;
-    flex-direction: column;   
+    flex-direction: column;
     align-items: center;
     gap: 10px;
-    margin: 0;
+    margin-inline: 15px;
     min-height: 100dvh;
 }
 
@@ -78,12 +78,12 @@ nav a.active{
 
 /*Margen del scroll-top para links a la misma pagina*/
 section, main, footer{
-    scroll-margin-top: 100px;
+    scroll-margin-top: 95px;
 }
 
 @media (max-width: 640px) {
     section, main, footer{
-        scroll-margin-top: 76px;
+        scroll-margin-top: 70px;
     }
 }
 
